Fixing double include in the final expression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ set(fotrancl_SRCS
 add_library(clfortran STATIC ${fotrancl_SRCS} )
 target_link_libraries(clfortran ${OpenCL_LIBRARIES})
 
-install(FILES ${CMAKE_Fortran_MODULE_DIRECTORY}/include/\${CMAKE_INSTALL_CONFIG_NAME}/clfortran.mod
+install(FILES ${CMAKE_Fortran_MODULE_DIRECTORY}/\${CMAKE_INSTALL_CONFIG_NAME}/clfortran.mod
 		DESTINATION include
 		COMPONENT Applications)
 
