Fixing typo where we only want the intermediate directory if we are using Visual Studio as the generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ set(fotrancl_SRCS
 add_library(clfortran STATIC ${fotrancl_SRCS} )
 target_link_libraries(clfortran ${OpenCL_LIBRARIES})
 
-if(MSVC OR XCODE)
+if(MSVC_IDE OR XCODE)
   set(MOD_PATH "\\\${CMAKE_INSTALL_CONFIG_NAME}")
 else()
     set(MOD_PATH ".")
